/*
 * This project is licensed under the MIT license. Module model-view-viewmodel is using ZK framework licensed under LGPL (see lgpl-3.0.txt).
 *
 * The MIT License
 * Copyright © 2014-2022 Ilkka Seppälä
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 * THE SOFTWARE.
 */
package com.iluwatar.bff.service.impl;

import com.iluwatar.bff.model.SupplierRecord;
import com.iluwatar.bff.service.SupplierService;
import java.util.List;
import java.util.Map;

/** In-memory stand-in for the real supplier service API, reachable only from the intranet. */
public final class InMemorySupplierService implements SupplierService {

  /** Supplier records stored in memory, keyed by product name. */
  private final Map<String, List<SupplierRecord>> recordsByProductName;

  /**
   * Creates the service with a fixed backing map of supplier records, keyed by product name.
   *
   * @param records the supplier data this service serves
   */
  public InMemorySupplierService(final Map<String, List<SupplierRecord>> records) {
    this.recordsByProductName = records;
  }

  @Override
  public List<SupplierRecord> getSupplierRecords(final String productName) {
    return recordsByProductName.getOrDefault(productName, List.of());
  }
}
